--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
+}
+
 body {
     background: #74ebd5;
     /* fallback for old browsers */
@@ -5,4 +11,86 @@ body {
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #ACB6E5, #74ebd5);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+h1 {}
+
+h2 {
+    font-size: .8em;
+    color: #AAB5AD;
+}
+
+.wrapper-position {
+    display: flex;
+    flex-direction: column;
+    margin: 4% auto;
+    height: 82vh;
+    width: 35vw;
+}
+
+.wrapper {
+    background-color: white;
+    box-shadow: 0 0 .5em grey;
+    border-radius: 10px;
+    /* padding: 0 4%; */
+}
+
+nav {
+    width: 100%;
+    border-bottom: 1px solid silver;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    padding: 4% 16% 0 16%;
+    
+}
+
+.menu__item {
+    /* padding-bottom: 5px; */
+}
+
+.menu__item--active {
+    padding-bottom: 4%;
+    border-bottom: 2px solid #74ebd5;
+}
+
+.actual-date {
+    text-align: center;
+    padding: 4% 0;
+}
+
+.add-form__input {
+    margin: 4% auto;
+    display: block;
+}
+
+.input {
+    height: 30px;
+    width: 60%;
+    padding: 2px 10px;
+    border: none;
+    border-bottom: 1px solid silver;
+}
+
+.tasks {
+    /* border: 1px solid coral; */
+    /* display: inline-block; */
+    list-style: none;
+    line-height: 2em;
+    text-align: center;
+    padding-top: 2%;
+    padding-left: 0;
+}
+
+.tasks__checkbox {
+    margin-right: 8px;
+    vertical-align: middle;
+
+}
+
+.checkbox {
+    
 }
