--- a/main.css
+++ b/main.css
@@ -13,7 +13,9 @@ body {
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-h1 {}
+h1 {
+    font-size: 2em;
+}
 
 h2 {
     font-size: .8em;
@@ -59,7 +61,10 @@ nav {
 
 .actual-date {
     text-align: center;
-    padding: 4% 0;
+    padding-top: 15%;
+    padding-bottom: 4%;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .add-form__input {
@@ -73,6 +78,10 @@ nav {
     padding: 2px 10px;
     border: none;
     border-bottom: 1px solid silver;
+}
+.input:focus {
+    outline: none;
+    border-bottom: 1px solid #74ebd5;
 }
 
 .tasks {
@@ -92,5 +101,5 @@ nav {
 }
 
 .checkbox {
-    
+    /* apply styles to ticks */
 }
