--- a/timer.css
+++ b/timer.css
@@ -9,16 +9,6 @@ a {
     color: #000000;
 }
 
-@keyframes appear {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 100%;
-    }
-}
-
 body {
     background: #74ebd5;
     /* fallback for old browsers */
@@ -31,11 +21,6 @@ body {
 
 h1 {
     font-size: 2em;
-}
-
-h2 {
-    font-size: .8em;
-    color: #AAB5AD;
 }
 
 .wrapper-position {
@@ -78,7 +63,7 @@ nav {
     border-bottom: 2px solid #74ebd5;
 }
 
-.actual-date {
+.timer {
     text-align: center;
     padding-top: 15%;
     padding-bottom: 4%;
@@ -86,78 +71,29 @@ nav {
     padding-right: 0;
 }
 
-.add-form__input {
-    margin: 4% auto;
-    display: block;
+.buttons {
+    text-align: center;
+    margin-top: 60px;
 }
 
-.input {
-    height: 30px;
-    width: 60%;
-    padding: 2px 10px;
-    border: none;
-    border-bottom: 1px solid silver;
+button {
+    /* position: relative; */
+    display: inline-block;
+    width: 100px;
+    height: 50px;
+    background-color: #74ebd5;;
+    border-style: none;
+    border-radius: 5px;
+    font-weight: bold;
+}
+button:hover {
+    background-color: #5dceb9;
+    border-style: none;
 }
 
-.input:focus {
-    outline: none;
-    border-bottom: 1px solid #74ebd5;
-}
-
-.tasks {
-    /* border: 1px solid coral; */
-    /* display: inline-block; */
-    list-style: none;
-    line-height: 1.5em;
-    font-size: .9em;
-    text-align: left;
-    padding-top: 2%;
-    padding-left: 92px;
-    padding-right: 92px;
-    height: 210px;
-    overflow: auto;
-}
-
-.tasks__item {
-    animation-name: appear;
-    animation-duration: 1s;
-}
-
-::-webkit-scrollbar {
-    width: 5px;
-}
-
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #74ebd5;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: grey;
-}
-
-.tasks__checkbox {
-    /* border: 1px solid coral; */
-    margin-right: 10px;
-    vertical-align: middle;
-    animation-name: appear;
-    animation-duration: 1s;
-}
-
-.checkbox {
-    /* apply styles to ticks */
-}
-
-.archive-position {
+.stoper {
     position: relative;
-    top: 3%;
-    left: 85%;
-}
-
-.archive {
-    /* border: 1px solid coral; */
-    width: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 20px;
 }
