--- a/main.css
+++ b/main.css
@@ -29,6 +29,12 @@ body {
     overflow: hidden;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    /* position: relative; */
+}
+
 h1 {
     font-size: 2em;
 }
@@ -48,9 +54,9 @@ h2 {
 
 .wrapper {
     /* border: 1px solid coral; */
-    background-color: white;
-    box-shadow: 0 0 .5em grey;
-    border-radius: 10px;
+    background-color: #F7F4F4;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 4px 4px 12px rgba(0, 0, 0, 0.25);
+    border-radius: 21px;
     animation-name: appear;
     animation-duration: 1s;
     /* padding: 0 4%; */
@@ -58,7 +64,10 @@ h2 {
 
 nav {
     width: 100%;
-    border-bottom: 1px solid silver;
+    border-bottom: 1px solid #FFFFFF;
+    background: #F6F4F4;
+    box-shadow: inset -4px -4px 12px rgba(199, 199, 199, 0.25);
+    border-radius: 21px 21px 0px 0px;
 }
 
 .menu {
@@ -66,14 +75,15 @@ nav {
     justify-content: space-between;
     list-style: none;
     padding: 4% 16% 0 16%;
-
 }
 
 .menu__item {
+    transform: translateY(1px);
     /* padding-bottom: 5px; */
 }
 
 .menu__item--active {
+    transform: translateY(1px);
     padding-bottom: 4%;
     border-bottom: 2px solid #74ebd5;
 }
@@ -92,29 +102,79 @@ nav {
 }
 
 .input {
-    height: 30px;
-    width: 60%;
+    height: 40px;
+    width: 70%;
     padding: 2px 10px;
-    border: none;
-    border-bottom: 1px solid silver;
+    background-color: #F6F6F6;
+    border: 1px solid rgba(255, 255, 255, 0.75);
+    /* border-bottom: 1px solid silver; */
+    box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.8), 4px 4px 8px rgba(209, 205, 199, 0.8);
+    border-radius: 25px;
 }
 
 .input:focus {
     outline: none;
-    border-bottom: 1px solid #74ebd5;
+    background: #F6F6F6;
+    border: 1px solid rgba(255, 255, 255, 0.8);
+    box-sizing: border-box;
+    box-shadow: 4px 4px 12px #FFFFFF, -4px -4px 12px rgba(209, 205, 199, 0.8);
+    border-radius: 25px;
+}
+
+.tasks__label input {
+    opacity: 0;
+    position: absolute;
+}
+
+.tasks__label .checkbox-custom {
+    display: inline-block;
+    position: relative;
+    top: 8px;
+    margin-right: 15px;
+    height: 16px;
+    width: 16px;
+    background: #F6F6F6;
+    border: 1px solid #F4F4F4;
+    box-shadow: 2px 2px 4px #FFFFFF, -2px -2px 4px rgba(209, 205, 199, 0.8);
+    border-radius: 2px;
+}
+
+.tasks__label .checkbox-custom::after {
+    content: "✓";
+    opacity: 0;
+}
+
+.tasks__label input:checked~.checkbox-custom {
+    display: inline-block;
+    height: 16px;
+    width: 16px;
+    background: #F6F6F6;
+    border: 1px solid #F4F4F4;
+    box-shadow: -2px -2px 4px #FFFFFF, 2px 2px 4px rgba(209, 205, 199, 0.8);
+    border-radius: 2px;
+}
+
+.tasks__label input:checked~.checkbox-custom::after {
+    color: black;
+    font-weight: 600;
+    font-size: 12px;
+    left: 2px;
+    opacity: 1;
+    position: relative;
+    top: -6px;
 }
 
 .tasks {
-    /* border: 1px solid coral; */
-    /* display: inline-block; */
+    display: block;
+    color: black;
     list-style: none;
-    line-height: 1.5em;
+    line-height: 1.9em;
     font-size: .9em;
     text-align: left;
     padding-top: 2%;
-    padding-left: 92px;
-    padding-right: 92px;
-    height: 210px;
+    padding-left: 90px;
+    padding-right: 90px;
+    height: 175px;
     overflow: auto;
 }
 
@@ -140,24 +200,38 @@ nav {
 }
 
 .tasks__checkbox {
-    /* border: 1px solid coral; */
     margin-right: 10px;
     vertical-align: middle;
     animation-name: appear;
-    animation-duration: 1s;
 }
 
-.checkbox {
-    /* apply styles to ticks */
-}
-
-.archive-position {
-    position: relative;
-    top: 3%;
-    left: 85%;
+.tasks input {
+    cursor: pointer;
 }
 
 .archive {
-    /* border: 1px solid coral; */
-    width: 30px;
+    padding: 20px;
+}
+
+.archive-position {
+    align-self: flex-end;
+}
+
+.archive-img {
+    margin: auto;
+}
+
+.circle-button {
+    cursor: pointer;
+    outline: none;
+    width: 55px;
+    height: 55px;
+    background: #F6F4F4;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.5), 4px 4px 12px rgba(209, 205, 199, 0.5);
+}
+
+.circle-button:active {
+    box-shadow: 4px 4px 12px #FFFFFF, -4px -4px 12px rgba(209, 205, 199, 0.5);
 }
