--- a/timer.css
+++ b/timer.css
@@ -9,6 +9,16 @@ a {
     color: #000000;
 }
 
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 100%;
+    }
+}
+
 body {
     background: #74ebd5;
     /* fallback for old browsers */
@@ -31,6 +41,7 @@ h1 {
 
 h2 {
     font-size: .8em;
+    font-weight: lighter;
     color: #AAB5AD;
 }
 
@@ -75,6 +86,8 @@ nav {
 
 .menu__item--active {
     transform: translateY(1px);
+    font-weight: 600;
+    color: #000000;
     padding-bottom: 4%;
     border-bottom: 2px solid #74ebd5;
 }
@@ -87,6 +100,49 @@ nav {
     padding-right: 0;
 }
 
+.stoper {
+    padding-top: 5%;
+}
+
+.records {
+    padding-top: 6%;
+}
+
+.times {
+    display: block;
+    color: #AAB5AD;
+    list-style: none;
+    line-height: 1.9em;
+    font-size: .9em;
+    text-align: center;
+    padding-top: 2%;
+    padding-left: 90px;
+    padding-right: 90px;
+    height: 125px;
+    overflow: auto;
+}
+
+.record__item {
+    animation-name: appear;
+    animation-duration: 1s;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #74ebd5;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: grey;
+}
+
 .time {
     font-size: 71px;
     line-height: 40px;
@@ -97,7 +153,7 @@ nav {
 
 .buttons {
     text-align: center;
-    margin-top: 60px;
+    margin-top: 20px;
 }
 
 .main {
@@ -111,6 +167,14 @@ nav {
     border: 1px solid #6FFFE4;
     box-sizing: border-box;
     box-shadow: -2px -2px 8px #FFFFFF, 2px 2px 15px rgba(116, 235, 213, 0.7);
+    border-radius: 25px;
+}
+
+.main:active {
+    color: #ffffff;
+    background: #74EBD5;
+    border: 1px solid #6FFFE4;
+    box-shadow: 4px 4px 4px #FFFFFF, -4px -4px 4px rgba(209, 205, 199, 0.5);
     border-radius: 25px;
 }
 
@@ -134,11 +198,4 @@ nav {
     border: 1px solid #F4F4F4;
     box-shadow: 4px 4px 4px #FFFFFF, -4px -4px 4px rgba(209, 205, 199, 0.5);
     border-radius: 25px;
-}
-
-.stoper {
-    position: relative;
-    text-align: center;
-    text-transform: uppercase;
-    margin-top: 20px;
 }
