--- a/main.css
+++ b/main.css
@@ -136,9 +136,13 @@ nav {
     margin-right: 15px;
     height: 16px;
     width: 16px;
-    background: #F6F6F6;
+    /* background: #F6F6F6;
     border: 1px solid #F4F4F4;
     box-shadow: 2px 2px 4px #FFFFFF, -2px -2px 4px rgba(209, 205, 199, 0.8);
+    border-radius: 2px; */
+    background: #F6F6F6;
+    border: 1px solid #F4F4F4;
+    box-shadow: -2px -2px 4px #FFFFFF, 2px 2px 4px rgba(209, 205, 199, 0.8);
     border-radius: 2px;
 }
 
@@ -151,9 +155,13 @@ nav {
     display: inline-block;
     height: 16px;
     width: 16px;
-    background: #F6F6F6;
+    /* background: #F6F6F6;
     border: 1px solid #F4F4F4;
     box-shadow: -2px -2px 4px #FFFFFF, 2px 2px 4px rgba(209, 205, 199, 0.8);
+    border-radius: 2px; */
+    background: #F6F6F6;
+    border: 1px solid #F4F4F4;
+    box-shadow: 2px 2px 4px #FFFFFF, -2px -2px 4px rgba(209, 205, 199, 0.8);
     border-radius: 2px;
 }
 
