--- a/main.css
+++ b/main.css
@@ -32,7 +32,6 @@ body {
 main {
     display: flex;
     flex-direction: column;
-    /* position: relative; */
 }
 
 h1 {
@@ -49,24 +48,22 @@ h2 {
     display: flex;
     flex-direction: column;
     margin: 4% auto;
-    height: 82vh;
-    width: 35vw;
 }
 
 .wrapper {
-    /* border: 1px solid coral; */
+    width: 35vw;
+    height: 82vh;
     background-color: #F7F4F4;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 4px 4px 12px rgba(0, 0, 0, 0.25);
     border-radius: 21px;
     animation-name: appear;
     animation-duration: 1s;
-    /* padding: 0 4%; */
 }
 
 nav {
     width: 100%;
-    border-bottom: 1px solid #FFFFFF;
     background: #F6F4F4;
+    border-bottom: 1px solid #FFFFFF;
     box-shadow: inset -4px -4px 12px rgba(199, 199, 199, 0.25);
     border-radius: 21px 21px 0px 0px;
 }
@@ -78,20 +75,15 @@ nav {
     padding: 4% 16% 0 16%;
 }
 
-.menu__item {
-    transform: translateY(1px);
-    /* padding-bottom: 5px; */
-}
-
 .menu__item--active {
-    transform: translateY(1px);
     font-weight: 600;
     color: #000000;
     padding-bottom: 4%;
     border-bottom: 2px solid #74ebd5;
+    transform: translateY(1px);
 }
 
-.actual-date {
+.current-date {
     text-align: center;
     padding-top: 15%;
     padding-bottom: 4%;
@@ -100,8 +92,9 @@ nav {
 }
 
 .add-form__input {
-    margin: 4% auto;
     display: block;
+    margin: 4% auto;
+    margin-bottom: 30px;
 }
 
 .input {
@@ -110,7 +103,6 @@ nav {
     padding: 2px 10px;
     background-color: #F6F6F6;
     border: 1px solid rgba(255, 255, 255, 0.75);
-    /* border-bottom: 1px solid silver; */
     box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.8), 4px 4px 8px rgba(209, 205, 199, 0.8);
     border-radius: 25px;
 }
@@ -119,7 +111,6 @@ nav {
     outline: none;
     background: #F6F6F6;
     border: 1px solid rgba(255, 255, 255, 0.8);
-    box-sizing: border-box;
     box-shadow: 4px 4px 12px #FFFFFF, -4px -4px 12px rgba(209, 205, 199, 0.8);
     border-radius: 25px;
 }
@@ -131,15 +122,11 @@ nav {
 
 .tasks__label .checkbox-custom {
     display: inline-block;
+    width: 16px;
+    height: 16px;
     position: relative;
     top: 8px;
     margin-right: 15px;
-    height: 16px;
-    width: 16px;
-    /* background: #F6F6F6;
-    border: 1px solid #F4F4F4;
-    box-shadow: 2px 2px 4px #FFFFFF, -2px -2px 4px rgba(209, 205, 199, 0.8);
-    border-radius: 2px; */
     background: #F6F6F6;
     border: 1px solid #F4F4F4;
     box-shadow: -2px -2px 4px #FFFFFF, 2px 2px 4px rgba(209, 205, 199, 0.8);
@@ -153,12 +140,8 @@ nav {
 
 .tasks__label input:checked~.checkbox-custom {
     display: inline-block;
-    height: 16px;
     width: 16px;
-    /* background: #F6F6F6;
-    border: 1px solid #F4F4F4;
-    box-shadow: -2px -2px 4px #FFFFFF, 2px 2px 4px rgba(209, 205, 199, 0.8);
-    border-radius: 2px; */
+    height: 16px;
     background: #F6F6F6;
     border: 1px solid #F4F4F4;
     box-shadow: 2px 2px 4px #FFFFFF, -2px -2px 4px rgba(209, 205, 199, 0.8);
@@ -166,32 +149,31 @@ nav {
 }
 
 .tasks__label input:checked~.checkbox-custom::after {
+    position: relative;
     color: black;
     font-weight: 600;
     font-size: 12px;
+    top: -6px;
     left: 2px;
     opacity: 1;
-    position: relative;
-    top: -6px;
 }
 
 .tasks {
     display: block;
+    height: 188px;
     color: black;
     list-style: none;
+    text-align: left;
     line-height: 1.9em;
     font-size: .9em;
-    text-align: left;
-    padding-top: 2%;
+    padding-top: 1%;
     padding-left: 90px;
     padding-right: 90px;
-    height: 175px;
     overflow: auto;
 }
 
-.tasks__item {
-    animation-name: appear;
-    animation-duration: 1s;
+.tasks input {
+    cursor: pointer;
 }
 
 ::-webkit-scrollbar {
@@ -210,33 +192,16 @@ nav {
     background: grey;
 }
 
-.tasks__checkbox {
-    margin-right: 10px;
-    vertical-align: middle;
-    animation-name: appear;
-}
-
-.tasks input {
-    cursor: pointer;
-}
-
 .archive {
     padding: 20px;
-}
-
-.archive-position {
     align-self: flex-end;
 }
 
-.archive-img {
-    margin: auto;
-}
-
 .circle-button {
-    cursor: pointer;
-    outline: none;
     width: 55px;
     height: 55px;
+    cursor: pointer;
+    outline: none;
     background: #F6F4F4;
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 50%;
