--- a/main.css
+++ b/main.css
@@ -122,10 +122,11 @@ nav {
 
 .tasks__label .checkbox-custom {
     display: inline-block;
+    text-indent: 0;
     width: 16px;
     height: 16px;
     position: relative;
-    top: 8px;
+    top: 6px;
     margin-right: 15px;
     background: #F6F6F6;
     border: 1px solid #F4F4F4;
@@ -163,12 +164,14 @@ nav {
     height: 188px;
     color: black;
     list-style: none;
+    text-indent: -2.2em;
     text-align: left;
     line-height: 1.9em;
     font-size: .9em;
+    hyphens: auto;
     padding-top: 1%;
-    padding-left: 90px;
-    padding-right: 90px;
+    padding-left: 105px;
+    padding-right: 65px;
     overflow: auto;
 }
 
