--- a/css/main.css
+++ b/css/main.css
@@ -1,213 +1,252 @@
 * {
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Ubuntu', sans-serif;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 a {
-    text-decoration: none;
-    color: #000000;
+  text-decoration: none;
+  color: #000000;
+  font-size: .8em;
+}
+
+@media only screen and (min-width: 450px) {
+  a {
+    font-size: 1em;
+  }
 }
 
 @keyframes appear {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    100% {
-        opacity: 100%;
-    }
+  100% {
+    opacity: 100%;
+  }
 }
 
 body {
-    background: #74ebd5;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #ACB6E5, #74ebd5);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #ACB6E5, #74ebd5);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    overflow: hidden;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
+  background: #74ebd5;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ACB6E5, #74ebd5);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ACB6E5, #74ebd5);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  overflow: hidden;
+  height: 100%;
 }
 
 h1 {
+  font-size: 1.7em;
+}
+
+@media only screen and (min-width: 450px) {
+  h1 {
     font-size: 2em;
+  }
 }
 
 h2 {
-    font-size: .8em;
-    font-weight: lighter;
-    color: #AAB5AD;
+  font-size: .8em;
+  font-weight: lighter;
+  color: #AAB5AD;
 }
 
-.wrapper-position {
-    display: flex;
-    flex-direction: column;
-    margin: 4% auto;
+.container {
+  display: flex;
+  height: 100vh;
+}
+
+@media only screen and (min-width: 450px) {
+  .container {
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .wrapper {
-    width: 35vw;
-    height: 82vh;
-    background-color: #F7F4F4;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 4px 4px 12px rgba(0, 0, 0, 0.25);
+  background-color: #F7F4F4;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 4px 4px 12px rgba(0, 0, 0, 0.25);
+  animation-name: appear;
+  animation-duration: 1s;
+}
+
+@media only screen and (min-width: 450px) {
+  .wrapper {
+    width: 400px;
     border-radius: 21px;
-    animation-name: appear;
-    animation-duration: 1s;
+  }
 }
 
 nav {
-    width: 100%;
-    background: #F6F4F4;
-    border-bottom: 1px solid #FFFFFF;
-    box-shadow: inset -4px -4px 12px rgba(199, 199, 199, 0.25);
+  width: 100%;
+  background: #F6F4F4;
+  border-bottom: 1px solid #FFFFFF;
+  box-shadow: inset -4px -4px 12px rgba(199, 199, 199, 0.25);
+}
+
+@media only screen and (min-width: 450px) {
+  nav {
     border-radius: 21px 21px 0px 0px;
+  }
 }
 
 .menu {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    padding: 4% 16% 0 16%;
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  padding: 4% 16% 0 16%;
 }
 
 .menu__item--active {
-    font-weight: 600;
-    color: #000000;
-    padding-bottom: 4%;
-    border-bottom: 2px solid #74ebd5;
-    transform: translateY(1px);
+  font-weight: 600;
+  color: #000000;
+  padding-bottom: 4%;
+  border-bottom: 2px solid #74ebd5;
+  transform: translateY(1px);
+}
+
+main {
+  display: flex;
+  flex-direction: column;
 }
 
 .current-date {
-    text-align: center;
-    padding-top: 15%;
-    padding-bottom: 4%;
-    padding-left: 0;
-    padding-right: 0;
+  text-align: center;
+  padding-top: 15%;
+  padding-bottom: 4%;
 }
 
 .add-form__input {
-    display: block;
-    margin: 4% auto;
-    margin-bottom: 30px;
+  display: block;
+  margin: 4% auto;
+  margin-bottom: 30px;
 }
 
 .input {
-    height: 40px;
-    width: 70%;
-    padding: 2px 10px;
-    background-color: #F6F6F6;
-    border: 1px solid rgba(255, 255, 255, 0.75);
-    box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.8), 4px 4px 8px rgba(209, 205, 199, 0.8);
-    border-radius: 25px;
+  height: 40px;
+  width: 70%;
+  padding: 2px 10px;
+  background-color: #F6F6F6;
+  border: 1px solid rgba(255, 255, 255, 0.75);
+  box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.8), 4px 4px 8px rgba(209, 205, 199, 0.8);
+  border-radius: 25px;
 }
 
 .input:focus {
-    outline: none;
-    background: #F6F6F6;
-    border: 1px solid rgba(255, 255, 255, 0.8);
-    box-shadow: 4px 4px 12px #FFFFFF, -4px -4px 12px rgba(209, 205, 199, 0.8);
-    border-radius: 25px;
+  outline: none;
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  box-shadow: 4px 4px 12px #FFFFFF, -4px -4px 12px rgba(209, 205, 199, 0.8);
 }
 
 .tasks__label input {
-    opacity: 0;
-    position: absolute;
+  opacity: 0;
+  position: absolute;
 }
 
 .tasks__label .checkbox-custom {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    position: relative;
-    top: 8px;
-    margin-right: 15px;
-    background: #F6F6F6;
-    border: 1px solid #F4F4F4;
-    box-shadow: -2px -2px 4px #FFFFFF, 2px 2px 4px rgba(209, 205, 199, 0.8);
-    border-radius: 2px;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  position: relative;
+  top: 8px;
+  margin-right: 15px;
+  background: #F6F6F6;
+  border: 1px solid #F4F4F4;
+  box-shadow: -2px -2px 4px #FFFFFF, 2px 2px 4px rgba(209, 205, 199, 0.8);
+  border-radius: 2px;
 }
 
 .tasks__label .checkbox-custom::after {
-    content: "✓";
-    opacity: 0;
+  content: "✓";
+  opacity: 0;
 }
 
 .tasks__label input:checked~.checkbox-custom {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background: #F6F6F6;
-    border: 1px solid #F4F4F4;
-    box-shadow: 2px 2px 4px #FFFFFF, -2px -2px 4px rgba(209, 205, 199, 0.8);
-    border-radius: 2px;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: #F6F6F6;
+  border: 1px solid #F4F4F4;
+  box-shadow: 2px 2px 4px #FFFFFF, -2px -2px 4px rgba(209, 205, 199, 0.8);
+  border-radius: 2px;
 }
 
 .tasks__label input:checked~.checkbox-custom::after {
-    position: relative;
-    color: black;
-    font-weight: 600;
-    font-size: 12px;
-    top: -6px;
-    left: 2px;
-    opacity: 1;
+  position: relative;
+  color: black;
+  font-weight: 600;
+  font-size: 12px;
+  top: -6px;
+  left: 2px;
+  opacity: 1;
 }
 
 .tasks {
-    display: block;
-    height: 188px;
-    color: black;
-    list-style: none;
-    text-align: left;
-    line-height: 1.9em;
-    font-size: .9em;
-    padding-top: 1%;
-    padding-left: 90px;
-    padding-right: 90px;
-    overflow: auto;
+  display: block;
+  height: 188px;
+  color: black;
+  list-style: none;
+  text-align: left;
+  line-height: 1.9em;
+  font-size: .9em;
+  padding: 5px 60px 0 60px;
+  overflow: auto;
+}
+
+@media only screen and (min-width: 450px) {
+  .tasks {
+    padding: 5px 70px 0 70px;
+  }
 }
 
 .tasks input {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+  background: #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #74ebd5;
+  background: #74ebd5;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: grey;
+  background: grey;
 }
 
 .archive {
+  position: fixed;
+  padding: 20px;
+  right: 0;
+  bottom: 0;
+}
+
+@media only screen and (min-width: 450px) {
+  .archive {
+    position: relative;
     padding: 20px;
     align-self: flex-end;
+  }
 }
 
 .circle-button {
-    width: 55px;
-    height: 55px;
-    cursor: pointer;
-    outline: none;
-    background: #F6F4F4;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    border-radius: 50%;
-    box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.5), 4px 4px 12px rgba(209, 205, 199, 0.5);
+  width: 55px;
+  height: 55px;
+  cursor: pointer;
+  outline: none;
+  background: #F6F4F4;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.5), 4px 4px 12px rgba(209, 205, 199, 0.5);
 }
 
 .circle-button:active {
-    box-shadow: 4px 4px 12px #FFFFFF, -4px -4px 12px rgba(209, 205, 199, 0.5);
+  box-shadow: 4px 4px 12px #FFFFFF, -4px -4px 12px rgba(209, 205, 199, 0.5);
 }
