--- a/css/main.css
+++ b/css/main.css
@@ -70,11 +70,14 @@ h2 {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 4px 4px 12px rgba(0, 0, 0, 0.25);
   animation-name: appear;
   animation-duration: 1s;
+  height: 100vh;
+  width: 100vw;
 }
 
 @media only screen and (min-width: 450px) {
   .wrapper {
     width: 400px;
+    height: 550px;
     border-radius: 21px;
   }
 }
