--- a/css/timer.css
+++ b/css/timer.css
@@ -1,212 +1,250 @@
 * {
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Ubuntu', sans-serif;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 a {
-    text-decoration: none;
-    color: #000000;
+  text-decoration: none;
+  color: #000000;
+}
+
+@media only screen and (min-width: 450px) {
+  a {
+    font-size: 1em;
+  }
 }
 
 @keyframes appear {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    100% {
-        opacity: 100%;
-    }
+  100% {
+    opacity: 100%;
+  }
 }
 
 body {
-    background: #74ebd5;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #ACB6E5, #74ebd5);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #ACB6E5, #74ebd5);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    overflow: hidden;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
+  background: #74ebd5;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ACB6E5, #74ebd5);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ACB6E5, #74ebd5);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  overflow: hidden;
+  height: 100%;
 }
 
 h1 {
+  font-size: 2em;
+}
+
+@media only screen and (min-width: 450px) {
+  h1 {
     font-size: 2em;
+  }
 }
 
 h2 {
-    color: #AAB5AD;
-    font-size: .8em;
-    font-weight: lighter;
+  color: #AAB5AD;
+  font-size: .8em;
+  font-weight: lighter;
 }
 
-.wrapper-position {
-    display: flex;
-    flex-direction: column;
-    margin: 4% auto;
-    width: 35vw;
-    height: 82vh;
+.container {
+  display: flex;
+  height: 100vh;
+}
+
+@media only screen and (min-width: 450px) {
+  .container {
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .wrapper {
-    background-color: #F7F4F4;
-    box-shadow: 0 0 .5em grey;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  background-color: #F7F4F4;
+  box-shadow: 0 0 .5em grey;
+  animation-name: appear;
+  animation-duration: 1s;
+}
+
+@media only screen and (min-width: 450px) {
+  .wrapper {
+    width: 400px;
+    height: 550px;
     border-radius: 21px;
-    animation-name: appear;
-    animation-duration: 1s;
+  }
 }
 
 nav {
-    width: 100%;
-    border-bottom: 1px solid #FFFFFF;
-    background: #F6F4F4;
-    box-shadow: inset -4px -4px 12px rgba(199, 199, 199, 0.25);
-    border-radius: 21px 21px 0px 0px;
+  width: 100%;
+  border-bottom: 1px solid #FFFFFF;
+  background: #F6F4F4;
+  box-shadow: inset -4px -4px 12px rgba(199, 199, 199, 0.25);
+  border-radius: 21px 21px 0px 0px;
 }
 
 .menu {
-    display: flex;
-    justify-content: space-between;
-    padding: 4% 16% 0 16%;
-    list-style: none;
+  display: flex;
+  justify-content: space-between;
+  padding: 4% 16% 0 16%;
+  list-style: none;
 }
 
 .menu__item--active {
-    color: #000000;
-    font-weight: 600;
-    padding-bottom: 4%;
-    border-bottom: 2px solid #74ebd5;
-    transform: translateY(1px);
+  color: #000000;
+  font-weight: 600;
+  padding-bottom: 4%;
+  border-bottom: 2px solid #74ebd5;
+  transform: translateY(1px);
+}
+
+main {
+  display: flex;
+  flex-direction: column;
 }
 
 .timer {
-    text-align: center;
-    padding: 15% 0 4% 0;
+  text-align: center;
+  padding: 15% 0 4% 0;
 }
 
 .stoper {
-    padding-top: 5%;
+  padding-top: 5%;
 }
 
 .records {
-    padding-top: 6%;
+  padding-top: 6%;
 }
 
 .times {
-    display: block;
-    height: 125px;
-    text-align: center;
-    color: #AAB5AD;
-    font-size: .9em;
-    list-style: none;
-    line-height: 1.9em;
-    padding-top: 2%;
-    padding-left: 90px;
-    padding-right: 90px;
-    overflow: auto;
+  display: block;
+  height: 125px;
+  text-align: center;
+  color: #AAB5AD;
+  font-size: .9em;
+  list-style: none;
+  line-height: 1.9em;
+  padding-top: 2%;
+  padding-left: 90px;
+  padding-right: 90px;
+  overflow: auto;
 }
 
 .record__item {
-    animation-name: appear;
-    animation-duration: 1s;
+  animation-name: appear;
+  animation-duration: 1s;
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+  background: #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #74ebd5;
+  background: #74ebd5;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: grey;
+  background: grey;
 }
 
 .time {
-    text-align: center;
-    font-size: 62px;
-    line-height: 40px;
-    letter-spacing: 0.02em;
+  text-align: center;
+  font-size: 62px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
 }
 
 .buttons-position {
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-evenly;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .buttons {
-    text-align: center;
-    padding: 0 60px;
+  text-align: center;
+  padding: 0 30px;
 }
 
 .buttons--main {
-    display: inline-block;
-    width: 140px;
-    height: 40px;
-    outline: none;
-    color: #ffffff;
-    background: #74EBD5;
-    border: 1px solid #6FFFE4;
-    box-sizing: border-box;
-    box-shadow: -2px -2px 8px #FFFFFF, 2px 2px 15px rgba(116, 235, 213, 0.7);
-    border-radius: 25px;
+  display: inline-block;
+  width: 140px;
+  height: 40px;
+  outline: none;
+  color: #ffffff;
+  background: #74EBD5;
+  border: 1px solid #6FFFE4;
+  box-sizing: border-box;
+  box-shadow: -2px -2px 8px #FFFFFF, 2px 2px 15px rgba(116, 235, 213, 0.7);
+  border-radius: 25px;
 }
 
 .buttons--main:active {
-    color: #ffffff;
-    background: #74EBD5;
-    border: 1px solid #6FFFE4;
-    box-shadow: 4px 4px 4px #FFFFFF, -4px -4px 4px rgba(209, 205, 199, 0.5);
-    border-radius: 25px;
+  color: #ffffff;
+  background: #74EBD5;
+  border: 1px solid #6FFFE4;
+  box-shadow: 4px 4px 4px #FFFFFF, -4px -4px 4px rgba(209, 205, 199, 0.5);
+  border-radius: 25px;
 }
 
 .buttons--reset {
-    display: inline-block;
-    width: 140px;
-    height: 40px;
-    outline: none;
-    color: #000000;
-    background: #F6F4F4;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    box-sizing: border-box;
-    box-shadow: -2px -2px 4px rgba(255, 255, 255, 0.7), 2px 2px 4px rgba(209, 205, 199, 0.8);
-    border-radius: 25px;
+  display: inline-block;
+  width: 140px;
+  height: 40px;
+  outline: none;
+  color: #000000;
+  background: #F6F4F4;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  box-sizing: border-box;
+  box-shadow: -2px -2px 4px rgba(255, 255, 255, 0.7), 2px 2px 4px rgba(209, 205, 199, 0.8);
+  border-radius: 25px;
 }
 
 .buttons--reset:active {
-    color: #999999;
-    background: #F6F6F6;
-    border: 1px solid #F4F4F4;
-    box-shadow: 4px 4px 4px #FFFFFF, -4px -4px 4px rgba(209, 205, 199, 0.5);
-    border-radius: 25px;
+  color: #999999;
+  background: #F6F6F6;
+  border: 1px solid #F4F4F4;
+  box-shadow: 4px 4px 4px #FFFFFF, -4px -4px 4px rgba(209, 205, 199, 0.5);
+  border-radius: 25px;
 }
 
 .archive {
-    align-self: flex-end;
+  position: fixed;
+  padding: 20px;
+  right: 0;
+  bottom: 0;
+}
+
+@media only screen and (min-width: 450px) {
+  .archive {
+    position: relative;
     padding: 20px;
+    align-self: flex-end;
+  }
 }
 
 .circle-button {
-    width: 55px;
-    height: 55px;
-    cursor: pointer;
-    outline: none;
-    background: #F6F4F4;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    border-radius: 50%;
-    box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.5), 4px 4px 12px rgba(209, 205, 199, 0.5);
+  width: 55px;
+  height: 55px;
+  cursor: pointer;
+  outline: none;
+  background: #F6F4F4;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.5), 4px 4px 12px rgba(209, 205, 199, 0.5);
 }
 
 .circle-button:active {
-    box-shadow: 4px 4px 12px #FFFFFF, -4px -4px 12px rgba(209, 205, 199, 0.5);
+  box-shadow: 4px 4px 12px #FFFFFF, -4px -4px 12px rgba(209, 205, 199, 0.5);
 }
