--- a/css/timer.css
+++ b/css/timer.css
@@ -129,6 +129,7 @@ main {
   text-align: center;
   padding: 0 30px;
   margin-top: 20px;
+  margin-bottom: 5px;
   display: flex;
   justify-content: space-evenly; }
   .buttons__main {
