--- a/css/timer.css
+++ b/css/timer.css
@@ -66,9 +66,9 @@ h2 {
   height: 100vh;
   height: 550px;
   background-color: #F7F4F4;
-  box-shadow: 0 0 .5em grey;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 4px 4px 12px rgba(0, 0, 0, 0.25);
   animation-name: appear;
-  animation-duration: 1s; }
+  animation-duration: 1.5s; }
 
 @media only screen and (min-width: 450px) {
   .container {
