--- a/css/timer.css
+++ b/css/timer.css
@@ -64,7 +64,7 @@ h2 {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  height: 550px;
+  width: 100vw;
   background-color: #F7F4F4;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 4px 4px 12px rgba(0, 0, 0, 0.25);
   animation-name: appear;
