--- a/css/calendar.css
+++ b/css/calendar.css
@@ -19,6 +19,11 @@ body {
   overflow: hidden;
   height: 100%; }
 
+@media (orientation: landscape) {
+  body {
+    overflow: visible;
+    padding: 150px 0; } }
+
 a {
   text-decoration: none;
   color: #000000; }
