--- a/scss/timer.scss
+++ b/scss/timer.scss
@@ -25,6 +25,13 @@ body {
   height: 100%;
 }
 
+@media (orientation: landscape) {
+  body {
+    overflow: visible;
+    padding: 150px 0;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 5px;
 }
