--- a/css/calendar.css
+++ b/css/calendar.css
@@ -19,7 +19,7 @@ body {
   overflow: hidden;
   height: 100%; }
 
-@media (orientation: landscape) {
+@media (orientation: landscape) and (max-width: 680px) {
   body {
     overflow: visible;
     padding: 150px 0; } }
